#3717: coverage